at-6-fix-unnessery

--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <div class="avatar">
     
 </div>
-<div>
-    <span>username</span>    
+<div style="text-align: center;">
+    <button (click)="randomSubj()">щёлк</button>
 </div>
 
