--- a/src/app/user/user-settings/user-settings.component.scss
+++ b/src/app/user/user-settings/user-settings.component.scss
@@ -101,14 +101,14 @@ a {
     padding-bottom: 15px;
 }
 
-.cencel_button {
+.cancel_button {
     margin-right: 75px;
     height: 30px;
     width: 70px;
     border-radius: 5px;
 }
 
-.cencel_button:hover {
+.cancel_button:hover {
     background-color: rgb(235, 235, 235);
     border: .5px solid #999;
     color: #999;
