--- a/src/app/user/user-settings/user-settings.component.html
+++ b/src/app/user/user-settings/user-settings.component.html
@@ -105,7 +105,7 @@
 
         <div class="change_user-password">
             <div class="change_user-password--conteiner">
-                <mat-form-field class="datapicker_style" appearance="fill">
+                <mat-form-field class="datapicker_style" appearance="fill" errorStateMatcher="false">
                     <mat-label>Current Password</mat-label>
                     <input type="password"
                            matInput
@@ -116,7 +116,7 @@
             </div>
 
             <div class="change_user-password--conteiner">
-                <mat-form-field class="datapicker_style" appearance="fill">
+                <mat-form-field class="datapicker_style" appearance="fill" errorStateMatcher="false">
                     <mat-label>New Password</mat-label>
                     <input type="password"
                            matInput
@@ -130,11 +130,12 @@
                     <input type="password" 
                            matInput 
                            formControlName="confirmPassword">
-                    <mat-error *ngIf="userInfoForm.invalid && userInfoForm.dirty">
-                        Password is not declare
-                    </mat-error>
                 </mat-form-field>
             </div>
+
+            <mat-error *ngIf="userInfoForm.invalid && userInfoForm.dirty">
+                Password is not declare
+            </mat-error>
 
             <div class="accept_buttons" #getPasswordBut style="visibility: hidden;">
                 <button class="cancel_button" (click)="cancelPasswordButton()">
