--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -10,6 +10,8 @@
                     type="text"
                     matInput
                     formControlName="email"
+                    readonly
+                    onfocus="this.removeAttribute('readonly')"
                     (input)="changeState($event.target.value)">
             </mat-form-field>
 
@@ -36,6 +38,8 @@
                 <input class="input_log" 
                     type="password" 
                     matInput
+                    readonly
+                    onfocus="this.removeAttribute('readonly')"
                     formControlName="password">
             </mat-form-field>
 
@@ -44,6 +48,8 @@
                 <input class="input_log" 
                     type="password" 
                     matInput
+                    readonly
+                    onfocus="this.removeAttribute('readonly')"
                     formControlName="repeatPassword">
             </mat-form-field>
 
