--- a/src/app/user/user-settings/user-settings.component.html
+++ b/src/app/user/user-settings/user-settings.component.html
@@ -1,7 +1,7 @@
 <div class="user_settings-content" hideButtons>
     <form class="avatar-container">
         <div class="user_avatar">
-            <img class="user_photo" id="photo">
+            <img class="user_photo" id="photo" #getPhoto>
         </div>
 
         <button class="download_photo"
@@ -44,7 +44,7 @@
                 </mat-form-field>
             </div>
 
-            <div class="accept_buttons" id="first" style="visibility: hidden;" #getNameBut>
+            <div class="accept_buttons ref" style="visibility: hidden;" #getNameBut>
                 <button class="cancel_button" (click)="cancelFirstNameButton()">
                     Cancel
                 </button>
@@ -65,7 +65,7 @@
                 </mat-form-field>
             </div>
 
-            <div class="accept_buttons" id="second" style="visibility: hidden;" #getSurnameBut>
+            <div class="accept_buttons ref" style="visibility: hidden;" #getSurnameBut>
                 <button class="cancel_button" (click)="cancelSurNameButton()">
                     Cancel
                 </button>
@@ -91,7 +91,7 @@
                     <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
             
-                <div class="accept_buttons" id="birth" style="visibility: hidden;" #getBirthayBut>
+                <div class="accept_buttons ref" style="visibility: hidden;" #getBirthayBut>
                     <button class="cancel_button" (click)="cancelBirthdayButton()">
                         Cancel
                     </button>
@@ -139,7 +139,7 @@
                 Password is not declare
             </mat-error>
 
-            <div class="accept_buttons" #getPasswordBut style="visibility: hidden;">
+            <div class="accept_buttons ref" #getPasswordBut style="visibility: hidden;">
                 <button class="cancel_button" (click)="cancelPasswordButton()">
                     Cancel
                 </button>
