--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -39,11 +39,51 @@
     height: 30px;
     width: 70px;
     border-radius: 5px;
+    position: relative;
+    transition: .5s;
+    overflow: hidden;
 }
 
 .login_button:hover {
-    background-color: rgb(94, 230, 94);
+    background-color:  rgba(236, 236, 236, 0.87);
     border: .5px solid #999;
+}
+
+.login_button::before,
+.login_button::after { 
+    position: absolute;
+    content: '';
+    width: 50px;
+    height: 50px;
+    background-color: rgba(94, 94, 94, 0.849);
+    box-shadow: white;
+    left: 23px;
+    border-radius: 50%;
+    bottom: -53px;
+    opacity: .3;
+    z-index: 1;
+    transition: .5s;
+}
+
+.login_button:active::after {
+    animation-name: login;
+    animation-duration: .2s;
+    transition: .5s;
+    animation-fill-mode: backwards;
+}
+
+@keyframes login {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(3);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
 
 .cencel_button{
@@ -51,11 +91,52 @@
     height: 30px;
     width: 70px;
     border-radius: 5px;
+    position: relative;
+    transition: .2s;
+    overflow: hidden;
 }
 
 .cencel_button:hover {
-    background-color: rgb(255, 66, 66);
+    background-color: rgba(243, 243, 243, 0.87);
     border: .5px solid #999;
+    color: black;
+}
+
+.cencel_button::before,
+.cencel_button::after { 
+    position: absolute;
+    content: '';
+    width: 50px;
+    height: 50px;
+    background-color: rgba(94, 94, 94, 0.849);
+    box-shadow: white;
+    left: 15px;
+    border-radius: 50%;
+    bottom: -53px;
+    opacity: .3;
+    z-index: 1;
+    transition: .5s;
+}
+
+.cencel_button:active::after {
+    animation-name: cencel;
+    animation-duration: .2s;
+    transition: .5s;
+    animation-fill-mode: backwards;
+}
+
+@keyframes cencel {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(3);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
 
 .invalid_email-message {
@@ -79,4 +160,205 @@
 a {
     text-decoration: none;
     color: #000000;
+}
+
+@media (max-width: 2500px) {
+    .login_content {
+        margin-top: 100px;
+        width: 500px;
+    }
+    
+    .login_avtoriz {
+        height: 500px;
+        max-height: 500px;
+    }
+    
+    .login_login {
+        padding-top: 70px;
+    }
+
+    .cencel_button {
+        margin-right: 150px;
+        height: 45px;
+        width: 100px;
+        font-size: 20px;
+    }
+    
+    .datapicker_style {
+        width: 500px;
+        border-radius: 10px;
+    }
+    
+    .input_log {
+        height: 40px;
+        width: 400px;
+        font-size: 30px;
+    }
+    
+    .login_password {
+        padding-top: 60px;
+    }
+
+    .login_password {
+        padding-top: 40px;
+    }
+    
+    .login_buttons {
+        padding-top: 60px;
+    }
+    
+    .login_button {
+        height: 45px;
+        width: 100px;
+        font-size: 20px;
+    }
+
+    .label {
+        font-size: 21px;
+    }
+}
+
+@media (max-width: 1760px) {
+    .datapicker_style {
+        width: 350px;
+        border-radius: 5px;
+    }
+    
+    .input_log {
+        height: 35px;
+        width: 300px;
+        font-size: 25px;
+    }
+
+    .login_buttons {
+        padding-top: 30px;
+    }
+
+    .login_button{
+        height: 40px;
+        width: 80px;
+        font-size: 15px;
+    }
+
+    .cencel_button{
+        height: 40px;
+        width: 80px;
+        font-size: 15px;
+        margin-right: 90px;
+    }
+}
+
+@media (max-width: 1420px) {
+    .datapicker_style {
+        width: 350px;
+        border-radius: 5px;
+    }
+    
+    .input_log {
+        height: 35px;
+        width: 300px;
+        font-size: 25px;
+    }
+
+    .login_buttons {
+        padding-top: 40px;
+    }
+
+    .cencel_button{
+        margin-right: 100px;
+    }
+}
+
+@media (max-width: 1224px) {
+    .datapicker_style {
+        width: 300px;
+        border-radius: 5px;
+    }
+    
+    .input_log {
+        height: 20px;
+        width: 300px;
+        font-size: 20px;
+    }
+
+    .login_button{
+        height: 30px;
+        width: 70px;
+        font-size: 15px;
+        margin-left: 26px;
+    }
+
+    .cencel_button{
+        height: 30px;
+        width: 70px;
+        font-size: 15px;
+        margin-right: 26px;
+    }
+
+    .login_buttons {
+        padding-top: 30px;
+    }
+
+    .label {
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 1080px) {
+    .login_content{
+        margin-top: 50px;
+    }
+
+    .datapicker_style {
+        width: 250px;
+    }
+}
+
+@media (max-width: 640px) {
+    .login_content {
+        width: 300px;
+    }
+
+    .datapicker_style {
+        width: 200px;
+    }
+
+    .input_log {
+        height: 15px;
+        font-size: 15px;
+    }
+
+    .invalid_email-message {
+        padding-left: 50px;
+    }
+
+    .invalid_password-message {
+        padding-left: 50px;
+    }
+
+    .login_buttons{
+        padding-top: 25px;
+    }
+
+    .login_button{
+        height: 25px;
+        width: 60px;
+    }
+
+    .cencel_button{
+        height: 25px;
+        width: 60px;
+    }
+}
+
+@media (max-width: 540px) {
+    .login_content {
+        margin-top: 35px;
+    }
+}
+
+@media (max-width: 420px) {
+    .login_content {
+        margin-top: 20px;
+    }
 }
