--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,13 +2,13 @@
     <form class="menu" *ngIf="combine$ | async as data">
         <ul class="menu_list">
             <li class="menu_list-item">
-                <a routerLink="">Home</a>
+                <a class="menu_list-link" routerLink="">Home</a>
             </li>
             <li class="menu_list-item">
-                <a routerLink="dashboard">Dashboard</a>
+                <a class="menu_list-link" routerLink="dashboard">Dashboard</a>
             </li>
             <li class="menu_list-item">
-                <a routerLink="about-us">About Us</a>
+                <a class="menu_list-link" routerLink="about-us">About Us</a>
             </li>
             <li class="menu_log-item">
                  <div class="button_log-in"
@@ -41,7 +41,7 @@
                         </div>
                     </div>
 
-                    <mat-menu #menu="matMenu">
+                    <mat-menu #menu="matMenu" class="mat_menu">
                         <button mat-menu-item>
                             <span><a routerLink="profile">Your profile</a></span>
                         </button>
